--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -8,97 +8,74 @@
 <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
 {% endblock %} {% block content %}
 <div class="container-fluid">
-<div class="review-order" style="background: #DEE1FA;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    margin-top: 52px;
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    box-shadow: 3.2px 3.8px 7px 0 rgba(0, 0, 0, 0.2);">
-  <h3 style="padding-top: 20px;
-    text-align: center;
-    margin-bottom: -15px; font-family: 'K2D';">Review your order</h3>
-  <div class="row">
-    
-    <div class="card" id="cart-card">
-      <table class="table table-hover shopping-cart-wrap">
-        <thead class="text-muted">
-          <tr>
-            <th scope="col">Product</th>
-            <th scope="col">Price</th>
-          </tr>
-        </thead>
-        {% for item in cart_items %} {% csrf_token %}
-        <tbody>
-          <tr>
-            <td>
-              <div class="product-wrap">
-                <div class="product-list">
-                  <h6 class="product-title">Name: {{ item.issue.name }}</h6>
-                  <dl class="param param-inline">
-                    <dt>Description: </dt>
-                    <dd>{{ item.issue.description }}</dd>
-                  </dl>
-                  <dl class="param param-inline">
-                    <dt>Posted by: </dt>
-                    <dd>{{ item.issue.created_by }}</dd>
-                  </dl>
+  <div class="review-order">
+    <h3 class="review-order">Review your order</h3>
+    <div class="row">
+      <div class="card" id="cart-card">
+        <table class="table table-hover shopping-cart-wrap">
+          <thead class="text-muted">
+            <tr>
+              <th scope="col">Product</th>
+              <th scope="col">Price</th>
+            </tr>
+          </thead>
+          {% for item in cart_items %} {% csrf_token %}
+          <tbody>
+            <tr>
+              <td>
+                <div class="product-wrap">
+                  <div class="product-list">
+                    <h6 class="product-title">Name: {{ item.issue.name }}</h6>
+                    <dl class="param param-inline">
+                      <dt>Description: </dt>
+                      <dd>{{ item.issue.description }}</dd>
+                    </dl>
+                    <dl class="param param-inline">
+                      <dt>Posted by: </dt>
+                      <dd>{{ item.issue.created_by }}</dd>
+                    </dl>
+                  </div>
                 </div>
-              </div>
-            </td>
-            <td>
-              <div class="price-wrap">
-                <var class="price">{{ item.issue.price }}</var>
-              </div>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+              </td>
+              <td>
+                <div class="price-wrap">
+                  <var class="price">{{ item.issue.price }}</var>
+                </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="row">
+      <div class="total-wrapper">
+        <p class="total-text"> Total </p>
+        <p class="total-price"><i class="fas fa-euro-sign"></i>{{ total }}</p>
+      </div>
+    </div>
+    <div class="payment-wrapper">
+      <div class="row">
+        <div class="offset-md-3 col-md-12 my-4">
+          <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+            <h5 class="payment-details">Payment Details</legend>
+            <div id="credit-card-errors" style="display:none">
+              <div class="alert-message block-message error" id="stripe-error-message"></div>
+            </div>
+            <div class="form-group col-md-6">
+              {% bootstrap_form order_form %}
+            </div>
+            <div class="form-group col-md-6">
+              {% bootstrap_form payment_form %}
+            </div>
+            {% csrf_token %}
+            <div class="form-group col-md-12">
+              <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="total-wrapper" style="display: inherit;
-      margin-right: auto;
-      margin-left: auto; margin-top: 20px;">
-    <p class="total-text" style="margin-right: 10px;
-      font-size: 1.4rem;"> Total </p>
-    <p class="total-price" style="    font-size: 1.4rem;"><i class="fas fa-euro-sign"></i>{{ total }}</p>
-    </div>
-  </div>
-
-<div class="payment-wrapper" style="    background-color: #D1D2DC;
-    box-shadow: 3.2px 3.8px 7px 0 rgba(0, 0, 0, 0.2);
-    /* padding: 1px; */
-    margin: 40px 30px 40px 30px;">
-<div class="row">
-  <div class="offset-md-3 col-md-12 my-4">
-      <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-        <legend style="margin-top: 27px;
-    margin-bottom: 30px;
-    font-weight: bold;">Payment Details</legend>
-        <div id="credit-card-errors" style="display:none">
-          <div class="alert-message block-message error" id="stripe-error-message"></div>
-        </div>
-  
-        <div class="form-group col-md-6">
-          {% bootstrap_form order_form %}
-        </div>
-          
-        <div class="form-group col-md-6">
-          {% bootstrap_form payment_form %}
-        </div>
-  
-        {% csrf_token %}
-        <div class="form-group col-md-12">
-          <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-        </div>
-      </form>
-    </div>
-  </div>
-  </div>
-</div>
 </div>
 {% endblock %}
