--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,24 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700|K2D');
+
 body, html {
   font-family: 'Montserrat', sans-serif;
-  font-size: .9rem;
+  font-size: .9rem !important;
   background-color: #EBF0F4 !important;
+  height: 100%
 }
 
-footer {
-  background-color: #161A3F;
-  width: 100%;
-  height: 80px;
-  color: white;
-  position: absolute;
-  bottom: 0;
-}
-
-#github-icon {
-  color: white;
-  font-size: 1rem;
-  margin-top: -15px;
-}
 
 .page-title {
   font-size: 1.1rem;
@@ -362,16 +350,6 @@ var {
 
 /*/ checkout.html /*/
 
-.review-order {
-  background: #DEE1FA;
-  padding: 20px 40px;
-  margin-bottom: 20px;
-  margin-top: 52px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .total-wrapper {
   display: inherit;
   margin-right: auto;
@@ -379,28 +357,32 @@ var {
   margin-top: 20px;
 }
 
-.review-order {
+.review-order-title {
   padding-top: 34px;
   text-align: center;
   margin-bottom: -15px;
   font-family: 'K2D';
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .total-price {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 .total-text {
   margin-right: 10px;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 .payment-wrapper {
-  background-color: #D1D2DC;
-  box-shadow: 3.2px 3.8px 7px 0 rgba(0, 0, 0, 0.2);
-  margin: 40px 30px 40px 30px;
+    background-color: #D1D2DC;
+    box-shadow: 3.2px 3.8px 7px 0 rgba(0, 0, 0, 0.2);
+    width: 95%;
+    display: block;
+    margin: 30px auto;
+    padding: 30px 0;
 }
 
 .payment-details {
@@ -428,16 +410,21 @@ var {
 
 /*/ Media Queries /*/
 
+/* Iphone 5 */
 @media screen and (max-width: 320px) {
   #cart-card {
-    width: 280px;
+       width: 245px;
   }
   #jumbo-cta {
     padding: 28px 18px;
   }
+  .payment-wrapper {
+    width: 120%;
+    margin-left: -14px;
+  }
 }
 
-@media screen and (min-width: 321px) and (max-width: 576px) {
+@media screen and (min-width: 321px) and (max-width: 767px) {
   .last {
     display: none;
   }
@@ -459,21 +446,21 @@ var {
   #jumbo-cta {
     padding: 65px 38px;
   }
+  .payment-wrapper {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
-@media (min-width: 577px) {
-  #btn-mob-checkout {
-    display: none;
-  }
-  #btn-mobile {
-    display: none;
-  }
-}
 
 @media (max-width: 768px) {
   .cart-header {
     width: 85%;
   }
+  #total-checkout {
+    margin-left: 2px;
+  }
+  
 }
 
 @media screen and (min-width: 769px) and (max-width: 992px) {
