set fixed price

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -40,7 +40,7 @@
                   </td>
                   <td>
                     <div class="price-wrap">
-                      <var class="price">{{ item.issue.price }}</var>
+                      <var class="price">{{ item.price }}</var>
                     </div>
                   </td>
                 </tr>
