--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"> {% block head_js %} {% endblock head_js%}
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"> 
+  {% block head_js %} {% endblock head_js%}
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar navbar-dark bg-custom">
     {% if user.is_authenticated %}
-    <a class="navbar-brand cb-brand" href="{% url 'index' %}" id="logo-brand-nav"><i class="fas fa-cog" style="font-size: 1.7rem; margin-right: 5px;"></i></a>
+    <a class="navbar-brand cb-brand" id="logo-brand-nav" href="{% url 'issues' %}"><i class="fas fa-cog"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,7 +23,7 @@
       <ul class="navbar-nav ml-auto">
         <form action="{% url 'search' %}" method="GET" class="form-inline" id="form-search">
           <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search" id="input-search">
-          <button class="btn  my-2 my-sm-0" id="btn-outline-custom" type="submit" id="nav-form-btn">Search</button>
+          <button class="btn my-2 my-sm-0" id="btn-outline-custom" type="submit" id="nav-form-btn">Search</button>
         </form>
         <li class="nav-list"><a class="nav-link" href="{% url 'issues' %}"><i class="fas fa-home icon-nav"></i>Home</a></li>
         <li class="nav-list"><a class="nav-link" href="{% url 'my_issues' %}"><i class="fas fa-user icon-nav"></i>Profile</a></li>
@@ -34,39 +35,25 @@
         </a>
         </li>
         <li class="nav-list"><a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt icon-nav"></i>Log Out</a></li>
-        
       </ul>
     </div>
-          {% else %}
-      <a class="navbar-brand cb-brand" id="logo-brand-nav" href="{% url 'index' %}"><i class="fas fa-cog" style="font-size: 2rem;"></i></a> 
-      {% endif %}
+    {% else %}
+    <a class="navbar-brand cb-brand" id="logo-brand-nav" href="{% url 'index' %}"><i class="fas fa-cog"></i></a> {% endif %}
   </nav>
-<div class="container">
-  <div class="row">
-    {% if messages %}
-    <div class="alert alert-success" id="message-alert">
-      <div class="messages">
-        {% for message in messages %} {{ message }} {% endfor %}
+  <div class="container-fluid">
+    <div class="row">
+      {% if messages %}
+      <div class="alert alert-success" id="message-alert">
+        <div class="messages">
+          {% for message in messages %} {{ message }} {% endfor %}
+        </div>
       </div>
     </div>
-    </div>
-    {% endif %} 
-</div> 
-  {% block content %} {% endblock %}
-  
+    {% endif %}
+  </div>
 
-<!--<footer class="footer p-3">
-      <div class="row">
-        <div class="m-auto ">
-          <p>Created by Luisa Negri</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="m-auto">
-          <a href="https://github.com/luisanegri"><i class="fab fa-github" id="github-icon"></i></a>
-        </div>
-      </div>
-  </footer>-->
+{% block content %} {% endblock %}
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
