--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -36,6 +36,7 @@ body, html {
   padding-right: 10px;
   color: white;
   font-size: .9rem;
+  margin-top: 5px;
 }
 
 .nav-link {
@@ -81,6 +82,7 @@ body, html {
 #jumbo-cta {
   padding: 100px;
   background-color: #C7CEE8;
+
 }
 
 .jumbo-logo-wrapper {
