--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load bootstrap4 %}
 {% block content %}
+<div class="login-container">
 <div class="container">
     <form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
         <fieldset class="form-group">
@@ -13,5 +14,6 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </fieldset>
     </form>
+</div>
 </div>
 {% endblock %}
