--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -12,6 +12,7 @@
 
   <div class="b-features">
     <h2 class="cards-title">What we offer...</h2>
+    <div class="mobile-position">
     <div class="row">
       <div class="col-md-4">
         <div class="card card-info">
@@ -40,6 +41,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
