--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -454,6 +454,9 @@ var {
     width: 100%;
     margin-left: 0;
   }
+  #btn-checkout {
+    margin-left: 2px;
+  }
 }
 
 
@@ -471,8 +474,16 @@ var {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
   .cart-header {
     width: 70%;
+  }
+  .card-text {
+    font-size: 1rem;
+  }
+  .checkout {
+    float: right;
+    margin-right: -200px;
+    margin-bottom: -38px;
   }
 }
