--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -46,7 +46,7 @@
                 </tr>
                 {% endfor %}
                 <tr>
-                  <td>
+                  <td class="checkout">
                     <div class="row text-muted" id="total-checkout">
                       <p class="total">Total:</p>
                       <p class="total-price"><i class="fas fa-euro-sign"></i>{{ total }}</p>
